# dev

./: .pre-commit-config.yaml  .release-please-manifest.json  Cargo.toml  Justfile  README.md  release-please-config.json  review-findings.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
contrib/systemd/: dev-daemon.service
dev-cli/: CHANGELOG.md  Cargo.toml  build.rs
dev-cli/src/: main.rs
dev-lib/: Cargo.toml
dev-lib/src/: api.rs  config.rs  daemon.rs  discovery.rs  error.rs  lib.rs  resolve.rs  sandbox.rs  tmux.rs
docs/: api-and-protocol-analysis.md  ci-required-gate.md  devenv-workflow.md  glossary.md  release.md  workflow-service-design.md
docs/adr/: 001-release-automation.md  002-toml-config-and-session-uri.md  003-pre-adr-inter-session-messaging.md  004-pre-adr-mcp-integration.md  005-pre-adr-sandboxed-agent-sessions.md
scripts/: bootstrap.sh  install.sh
