[package]
name = "dev-lib"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
tmux_interface = { version = "0.4.0", default-features = false, features = ["tmux_3_5a"] }

[dev-dependencies]
tempfile = "3"
